--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <div class="container"> 
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img src="./img/codoacodo.png" alt="logo" width="20%">
+                <div class="container">
+                  <a class="navbar-brand col-3" href="#">
+                    <img src="./img/codoacodo.png" alt="logo" width="100px">
                     Conf Bs As
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">El lugar y la fecha</a>
+                        <a class="nav-link" href="#fecha">El lugar y la fecha</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Conviértete en orador</a>
+                        <a class="nav-link" href="#inscripcion">Conviértete en orador</a>
                       </li>
                       <li class="nav-item green">
                         <a href="#" class="nav-link text-success" id="ni_tickets">Comprar tickets</a>
@@ -136,6 +136,7 @@
             </div>
     </section>
     <section id="Octubre" class="d-flex">
+      <a name="fecha"></a>
       <div class="card">
         <div class="row bg-secondary">
           <div class="col-6">
@@ -154,6 +155,7 @@
       </div>
     </section>
     <section class="formulario">
+      <a name="inscripcion"></a>
       <div class="container d-flex align-items-center flex-column">
         <div class="container text-center my-3">
           <h6 class="text-black-50">CONVIÉRTETE EN UN</h6>
