New form created and index updated.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#inscripcion">Conviértete en orador</a>
                       </li>
                       <li class="nav-item green">
-                        <a href="#" class="nav-link text-success" id="ni_tickets">Comprar tickets</a>
+                        <a href="/form.html" class="nav-link text-success" target="_blank" id="ni_tickets">Comprar tickets</a>
                       </li>
                     </ul>
                   </div>
@@ -220,5 +220,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
