--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
                 <div class="container-buttons mt-2">
                   <button type="button" class="btn btn-outline-light mb-3">Quiero ser orador</button>
-                  <button type="button" class="btn btn-success mb-3">Comprar tickets</button>
+                  <a href="/form.html" type="button" target="_blank" class="btn btn-success mb-3">Comprar tickets</a>
                 </div>
               </div>
               <div class="carousel-item c-item" data-bs-interval="10000">
@@ -70,7 +70,7 @@
                 </p>
                 <div class="container-buttons mt-2">
                   <button type="button" class="btn btn-outline-light mb-3">Quiero ser orador</button>
-                  <button type="button" class="btn btn-success mb-3">Comprar tickets</button>
+                  <a href="/form.html" type="button" target="_blank" class="btn btn-success mb-3">Comprar tickets</a>
                 </div>
               </div>
               <div class="carousel-item c-item" data-bs-interval="10000">
@@ -85,7 +85,7 @@
                 </p>
                 <div class="container-buttons mt-2">
                   <button type="button" class="btn btn-outline-light mb-3">Quiero ser orador</button>
-                  <button type="button" class="btn btn-success mb-3">Comprar tickets</button>
+                  <a href="/form.html" type="button" target="_blank" class="btn btn-success mb-3">Comprar tickets</a>
                 </div>
               </div>
             </div>  
