--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#inscripcion">Conviértete en orador</a>
                       </li>
                       <li class="nav-item green">
-                        <a href="/form.html" class="nav-link text-success" target="_blank" id="ni_tickets">Comprar tickets</a>
+                        <a href="form.html" class="nav-link text-success" target="_blank" id="ni_tickets">Comprar tickets</a>
                       </li>
                     </ul>
                   </div>
